--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "trello-board",
+  "name": "restaurant-ordering-system",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -11,10 +11,13 @@
     "@types/node": "^17.0.42",
     "@types/react": "^18.0.12",
     "@types/react-dom": "^18.0.5",
+    "json-server": "^0.17.0",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-redux": "^8.0.2",
-    "react-scripts": "5.0.1",
+    "react-router": "^6.3.0",
+    "react-router-dom": "^6.3.0",
+    "react-scripts": "^2.1.3",
     "typescript": "^4.7.3",
     "web-vitals": "^2.1.4"
   },
@@ -22,7 +25,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "json": "json-server data.js -p 8084"
   },
   "eslintConfig": {
     "extends": [
@@ -41,5 +45,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "faker": "^4.1.0"
   }
 }
