--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-router": "^6.3.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "^2.1.3",
+    "redux-saga": "^1.1.3",
     "typescript": "^4.7.3",
     "web-vitals": "^2.1.4"
   },
